<resources>
    <string name="app_name">Battery Log</string>
    <string name="status">Status</string>
    <string name="health">Health</string>
    <string name="present">Present</string>
    <string name="level">Level</string>
    <string name="plugged">Plugged</string>
    <string name="voltage">Voltage</string>
    <string name="temperature">Temp</string>
    <string name="notification_permission_denied">No notification permission to start service.</string>
    <string name="notification_permission_granted">Notification permission granted, please start the service again.</string>
    <string name="background_run_permission_granted">Background running permission granted, please start the service again.</string>
    <string name="background_run_permission_not_granted">No Background running permission</string>
    <string name="service_is_running">Battery Log Service is running</string>
    <string name="stop_service">Stop Battery Log Service</string>
    <string name="start_service">Start Battery Log Service</string>
    <string name="start_stress_test">Start Stress Test</string>
    <string name="battery_status_unknown">N/A</string>
    <string name="battery_status_charging">Charging</string>
    <string name="battery_status_discharging">Discharging</string>
    <string name="battery_status_not_charging">Not Charging</string>
    <string name="battery_status_full">Full</string>
    <string name="battery_health_unknown">N/A</string>
    <string name="battery_health_good">Good</string>
    <string name="battery_health_overheat">Overheat</string>
    <string name="battery_health_dead">Dead</string>
    <string name="battery_health_over_voltage">OverVoltage</string>
    <string name="battery_health_unspecified_failure">Failure</string>
    <string name="battery_health_cold">Cold</string>
    <string name="battery_plugged_ac">Plug (AC)</string>
    <string name="battery_plugged_usb">Plug (USB)</string>
    <string name="battery_plugged_wireless">Wireless</string>
    <string name="have_battery">Have Battery</string>
    <string name="no_battery">No battery</string>
    <string name="battery_plugged_none">Unplugged</string>
    <string name="menu_settings">Setting</string>
    <string name="activity_settings">SettingsActivity</string>
    <string name="service_run_on_boot">Start service on boot</string>
    <string name="enable_wake_lock">Keep awake</string>
    <string name="enable_wake_lock_summary">When disabled, recording intervals may become longer while the screen is off</string>
    <string name="current">Current</string>
    <string name="capacity">Remaining</string>
    <string name="alert">Alert</string>
    <string name="alert_massage">Are you sure to delete this data? Unable to restore after deletion!</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="alert_massage_all">Are you sure to delete all data? Unable to restore after deletion!</string>
    <string name="log_list">Battery Log History</string>
    <string name="open_log_chart">Graph</string>
    <string name="open_log_detail">Detail</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="save_data_as">Save data as</string>
    <string name="rename">Rename</string>
    <string name="rename_log">Rename Log</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="rename_success">Log renamed successfully</string>
    <string name="battery_full_info">The battery is full, please remove the charger and start recording</string>
    <string name="time">Time</string>
    <string name="menu_about">About</string>
    <string name="menu_version">Version</string>
    <string name="version_info">Version Information</string>
    <string name="version_name">Version Name</string>
    <string name="version_code">Version Code</string>
    <string name="build_time">Build Time</string>
    <string name="app_name_label">App Name</string>
    <string name="about_app">About APP</string>
    <string name="about_app_info">Battery Log is a software to record battery voltage, current, temperature and other parameters, which can be used to test battery charge/discharge curves and temperature. \nAlso, the data can be exported and saved in CSV format.</string>
    <string name="author">Author</string>
    <string name="author_info">
\nAuthor: RinShiro
\n
\nEmail: me@shiro.la
\n
\nMade with ❤️ in 2025
    </string>
    <string name="open_source_license">Open Source License</string>
    <string name="open_source_license_info">
\nThis project uses the following open source libraries:
\n
\nAndroidX Libraries (Apache License 2.0)
\n• androidx.core:core-ktx
\n• androidx.activity:activity-ktx  
\n• androidx.appcompat:appcompat
\n• androidx.preference:preference-ktx
\n• androidx.fragment:fragment-ktx
\n• androidx.constraintlayout:constraintlayout
\n• androidx.room (room-runtime, room-ktx, room-compiler)
\n• androidx.lifecycle (viewmodel-ktx, livedata-ktx, common-java8)
\n• androidx.camera (camera2, lifecycle, view)
\n• androidx.navigation (fragment-ktx, ui-ktx, dynamic-features-fragment)
\nhttps://source.android.com/license
\n
\nMaterial Design Components (Apache License 2.0)
\n• Google Material Design library
\nhttps://github.com/material-components/material-components-android/blob/master/LICENSE
\n
\nGoogle Play Services (Google Play Services Terms)
\n• Google Play Services Location API
\nhttps://developers.google.com/terms/
\n
\nMPAndroidChart (Apache License 2.0)
\n• PhilJay MPAndroidChart library
\nhttps://github.com/PhilJay/MPAndroidChart/blob/master/LICENSE
\n
\nKotlin Standard Library (Apache License 2.0)
\n• JetBrains Kotlin stdlib
\nhttps://github.com/JetBrains/kotlin/blob/master/license/LICENSE.txt
    </string>
    <string name="cpu_stress_choice">CPU stress choice</string>
    <string name="location">Location</string>
    <string name="network">Network</string>
    <string name="sensors">Sensors</string>
    <string name="camera">Camera</string>
    <string name="gpu" translatable="false">GPU</string>
    <string name="cpu" translatable="false">CPU</string>
</resources>