<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:background="@color/material_dynamic_primary50"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:hint="@string/time"
        android:textColor="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/tv_level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:hint="@string/level"
        android:textColor="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:hint="@string/temperature"
        android:textColor="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/tv_voltage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:hint="@string/voltage"
        android:textColor="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/tv_plugged"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:hint="@string/status"
        android:textColor="?attr/colorOnPrimary" />
</LinearLayout>