<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:baselineAligned="false"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_log_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:hint="2023-12-18 13:47:51"
        android:padding="4dp"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:ignore="HardcodedText" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3"
        android:orientation="horizontal"
        android:rowCount="1"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/btn_log_item_chart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/ic_baseline_show_chart"
            android:text="@string/open_log_chart"
            app:iconPadding="0dp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btn_log_item_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/ic_baseline_table_rows"
            android:text="@string/open_log_detail"
            app:iconPadding="0dp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btn_log_item_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/ic_baseline_delete"
            android:text="@string/delete"
            app:iconPadding="0dp"
            tools:ignore="RtlHardcoded" />
    </GridLayout>

</LinearLayout>